lead upload update

--- a/templates/views/lead_management_upload.html
+++ b/templates/views/lead_management_upload.html
@@ -66,9 +66,9 @@
           <li>profile_link - (Proper URL)</li>
           <li>gender - (Male or Female)</li>
 
-          <li>business_no - (Countrycode + Number) [sample: 971527*****9]</li>
-          <li>mobile - (Countrycode + Number) [sample: 971527*****9]</li>
-          <li>second_mobile - (Countrycode + Number) [sample: 971527*****9]</li>
+          <li>business_no - (Tilde(`) + Countrycode + Number) [sample: `971527*****9]</li>
+          <li>mobile - (Tilde(`) + Countrycode + Number) [sample: `971527*****9]</li>
+          <li>second_mobile - (Tilde(`) + Countrycode + Number) [sample: `971527*****9]</li>
           
           <li>personal_email - (Proper Email)</li>
           <li>work_email - (Proper Email)</li>
