add modules to logs

--- a/templates/views/components/log_tabs.html
+++ b/templates/views/components/log_tabs.html
@@ -43,7 +43,7 @@
           {{$value.description}}
           </a></td>
           <td><i class="far fa-edit"></i> {{$value.log_type}}</td>
-          <th><i class="fas fa-laptop-code"></i> Module</th>
+          <th><i class="fas fa-laptop-code"></i> {{$value.module}}</th>
         </tr>
         {{/each}}
       </tbody>
