--- a/templates/views/lead_management_upload.html
+++ b/templates/views/lead_management_upload.html
@@ -1,10 +1,7 @@
 {{extend './layout.html'}} {{block 'content'}}
 <div class="card">
   <div class="card-body">
-    <form action="/lead-management/new_upload" method="post" enctype="multipart/form-data">
-      
-      
-
+    <form id='form_upload' action="/lead-management/new_upload" method="post" enctype="multipart/form-data">
       <div class="form-group">
         <label>Upload Name</label>
         <input
@@ -33,6 +30,7 @@
         </div>
         <small id="file_input_error" class="form-text text-danger"></small>
       </div>
+    </form>
       <div class="form-group">
         <a href="/app/cbi_template.csv" class="btn bg-teal btn-block font-weight-bold">
           <i class="fas fa-file-download"></i>
@@ -40,11 +38,10 @@
         </a>
       </div>
       <div class="form-group">
-        <button class="btn bg-info btn-block font-weight-bold">
+        <button onclick='submitUpload()' class="btn bg-info btn-block font-weight-bold">
           <i class="fas fa-file-upload"></i> Upload
         </button>
       </div>
-    </form>
   </div>
 </div>
 
@@ -103,6 +100,24 @@
   {{each errors}}
     handleError(`{{$index}}`,`{{$value}}`)
   {{/each}}
+
+  
+  function submitUpload() {
+    Swal.fire({
+      title: 'Do you want to Upload this file?',
+      icon: 'question',
+      showCloseButton: true,
+      showCancelButton: true,
+      confirmButtonText: '<i class="fas fa-save"></i> Create',
+      confirmButtonColor: '#20c997',
+      cancelButtonText: '<i class="fas fa-times"></i> Cancel',
+      cancelButtonColor: '#d81b60',
+    }).then((result) => {
+      if (result.isConfirmed) {
+        document.getElementById("form_upload").submit();
+      }
+    });
+  }
   
 </script>
 {{/block}}
