manual adding with initial meeting

--- a/templates/views/initial_meeting.html
+++ b/templates/views/initial_meeting.html
@@ -51,6 +51,7 @@
                   <i class="far fa-user"></i>
                   <a
                     href="/initial-meeting/edit/{{$value._id.toString()}}"
+                    target="_blank"
                     rel="nofollow noopener noreferrer"
                     class="text-info"
                     id="lead{{$index}}"
