--- a/templates/views/lead.html
+++ b/templates/views/lead.html
@@ -52,6 +52,7 @@
                   <i class="far fa-user"></i>
                   <a
                     href="/lead/edit/{{$value._id.toString()}}"
+                    target="_blank"
                     rel="nofollow noopener noreferrer"
                     class="text-info"
                     id="user{{$index}}"
