--- a/templates/views/lead_management.html
+++ b/templates/views/lead_management.html
@@ -118,6 +118,7 @@
                   <i class="far fa-user"></i>
                   <a
                     href="/lead-management/edit/{{$value._id.toString()}}"
+                    target="_blank"
                     rel="nofollow noopener noreferrer"
                     class="text-info"
                     id="user{{$index}}"
