--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -27,7 +27,7 @@
   href="/assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css"
 />
 <link rel="stylesheet" href="/assets/plugins/jqvmap/jqvmap.min.css" />
-<link rel="stylesheet" href="/assets/dist/css/adminlte.min.css" />>
+<link rel="stylesheet" href="/assets/dist/css/adminlte.min.css" />
 <link
   rel="stylesheet"
   href="/assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
