--- a/templates/views/initial_meeting.html
+++ b/templates/views/initial_meeting.html
@@ -21,6 +21,8 @@
         {{include './components/search_box.html', { name: 'job_title'} }}
         <!-- search company -->
         {{include './components/search_box.html', { name: 'company'} }}
+        <!-- search meeting-->
+        {{include './components/search_datetime.html', { name: 'meeting_date' } }}
 
       </div>
     </div>
@@ -119,6 +121,9 @@
   document.getElementById('company').value = decodeHTML(
     '{{search.company | escapeBackslash}}'
   );
+  document.getElementById('meeting_date').value = decodeHTML(
+    '{{search.meeting_date | escapeBackslash}}'
+  );
 
   function search(page = 1) {
     let url = window.location.href.split('?')[0];
@@ -127,17 +132,24 @@
     let contact = $('#contact').val();
     let job_title = $('#job_title').val();
     let company = $('#company').val();
+    let meeting_date = $('#meeting_date').val();
+
     url += `?page=${page}`;
     if (name) url += `&name=${name}`;
     if (email) url += `&email=${email}`;
     if (contact) url += `&contact=${contact}`;
     if (job_title) url += `&job_title=${job_title}`;
     if (company) url += `&company=${company}`;
+    if (meeting_date) url += `&meeting_date=${meeting_date}`;
     window.location.href = url;
   }
 
   $(function () {
     $('#pagination').html(pagination(page, totalPages, totalDocs, 'search'));
+    $('.datetimev2').datetimepicker({
+      format:'Y-m-d',
+      timepicker:false,
+    });
   });
 </script>
 {{/block}}
