--- a/templates/views/calendar.html
+++ b/templates/views/calendar.html
@@ -41,13 +41,13 @@
   
   var colors = {
     'NEW': '#007bff',
-    'MEETING_SAT': '#38cccc',
+    'MEETING_SAT': '#28a745',
     'NO_SHOW': '#dc3848' ,
     'CANCELED': '#ffc107',
   }
   var disabled_color = {
     'NEW': 'rgba(0, 123, 255, 0.5)',
-    'MEETING_SAT': 'rgba(56, 204, 204, 0.5)',
+    'MEETING_SAT': 'rgba(41, 168, 71, 0.5)',
     'NO_SHOW': 'rgba(220, 56, 72, 0.5)' ,
     'CANCELED': 'rgba(255, 193, 5, 0.5)',
   }
