--- a/templates/views/lead_management_add.html
+++ b/templates/views/lead_management_add.html
@@ -10,17 +10,17 @@
           {{include './components/input_text.html', {type: 'text', name: 'country', value: lead} }}
           {{include './components/input_text.html', {type: 'text', name: 'city', value: lead} }}
           {{include './components/input_text.html', {type: 'text', name: 'gender', value: lead} }}
-          {{include './components/input_text.html', {type: 'text', name: 'business_no', value: lead} }}
-          {{include './components/input_text.html', {type: 'text', name: 'mobile', value: lead} }}
-          {{include './components/input_text.html', {type: 'text', name: 'second_mobile', value: lead} }}
+          {{include './components/input_text_add.html', {type: 'text', name: 'business_no', value: lead} }}
+          {{include './components/input_text_add.html', {type: 'text', name: 'mobile', value: lead} }}
+          {{include './components/input_text_add.html', {type: 'text', name: 'second_mobile', value: lead} }}
         </div>
         <div class='col-md-6'>
           {{include './components/input_text.html', {type: 'text', name: 'last_name', value: lead} }}
           {{include './components/input_text.html', {type: 'text', name: 'job_title', value: lead} }}
           {{include './components/input_text.html', {type: 'text', name: 'company', value: lead} }}
-          {{include './components/input_text.html', {type: 'text', name: 'profile_link', value: lead} }}
-          {{include './components/input_text.html', {type: 'text', name: 'personal_email', value: lead} }}
-          {{include './components/input_text.html', {type: 'text', name: 'work_email', value: lead} }}
+          {{include './components/input_text_add.html', {type: 'text', name: 'profile_link', value: lead} }}
+          {{include './components/input_text_add.html', {type: 'text', name: 'personal_email', value: lead} }}
+          {{include './components/input_text_add.html', {type: 'text', name: 'work_email', value: lead} }}
           {{include './components/textarea.html', { name: 'description', value: lead} }}
         </div>
       </div>
@@ -101,11 +101,14 @@
         '14:00', '15:00', '16:00', '17:00', '18:00', '19:00',
       ],
       format:'Y-m-d h:i A',
-      onSelectTime:function(current_time,$input) { 
-        let original = $input.val()
-        $input.blur() 
-        $input.val(original)
-      },
+    
+    });
+
+    $(".datetimev2").blur(function() {
+      let time = parseInt(this.value.slice(11, 13)) + 1
+      time = time == 13 ? '01:00' : time + ':00'
+      time = time.length == 5 ? time : '0' + time
+      this.value = this.value.slice(0, 11) + time + this.value.slice(-3)
     });
   })
   
